--- a/logserver/docker-compose.yml
+++ b/logserver/docker-compose.yml
@@ -1,6 +1,10 @@
-
-
 services:
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
+
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
