--- a/logserver/docker-compose.yml
+++ b/logserver/docker-compose.yml
@@ -1,14 +1,26 @@
+version: "3.8"
+
 services:
   redis:
     image: redis:7
     ports:
       - "6379:6379"
 
-
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/code
+    command: gunicorn logserver.wsgi:application --bind 0.0.0.0:8000
     ports:
       - "8000:8000"
+    environment:
+      - DEBUG=0
+      - ALLOWED_HOSTS=*
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on:
+      - redis
+    restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.logserver.rule=Host(`logserver.yourdomain.com`)"
+      - "traefik.http.routers.logserver.entrypoints=websecure"
+      - "traefik.http.routers.logserver.tls.certresolver=myresolver"
