--- a/logserver/docker-compose.yml
+++ b/logserver/docker-compose.yml
@@ -24,3 +24,8 @@ services:
       - traefik.http.routers.numatrace.tls=true
       - traefik.http.routers.numatrace.tls.certresolver=myresolver
       - traefik.http.services.numatrace.loadbalancer.server.port=8000
+      - traefik.http.middlewares.websocket.headers.customrequestheaders.Upgrade=websocket
+      - traefik.http.middlewares.websocket.headers.customrequestheaders.Connection=Upgrade
+      - traefik.http.routers.numatrace.middlewares=websocket
+
+
