--- a/logserver/docker-compose.yml
+++ b/logserver/docker-compose.yml
@@ -9,6 +9,8 @@ services:
   web:
     build: .
     command: daphne -b 0.0.0.0 -p 8010 logserver.asgi:application
+    ports:
+      - "8010:8010"
     environment:
       - DEBUG=0
       - ALLOWED_HOSTS=numatrace.numatixsolutions.com
